--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   </head>
   <body>
     <p>hello world!!</p>
+
+    <li id="list_id">リスト1が入ります。</li>
+    <li class="list_class">リスト2が入ります。</li>    
+    <li>リスト3が入ります。</li>
+    <li class="list_class">リスト4が入ります。</li>
+
     <h1>ここには1番目に大きな見出しが入ります。</h1>
 <h2>ここには2番目に大きな見出しが入ります。</h2>
 <h3>ここには3番目に大きな見出しが入ります。</h3>
