[Update]Webサイトを作ってみよう-3

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>練習</title>
   </head>
   <body>
+    <div class="box">
+      <p class="box-txt">BOX</p>
+    </div>
     <p>hello world!!</p>
 
     <li id="list_id">リスト1が入ります。</li>
