[Finish]Webサイトを作ってみよう-3

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="box">
       <p class="box-txt">BOX</p>
     </div>
-    <p>hello world!!</p>
+    <p>hello world!!!</p>
 
     <li id="list_id">リスト1が入ります。</li>
     <li class="list_class">リスト2が入ります。</li>    
